--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,20 @@ body {
 #root {
 	min-height: 100vh;
 }
+
+/* width */
+::-webkit-scrollbar {
+	width: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px #71777b;
+	border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #7d848a;
+	border-radius: 10px;
+}
